--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-"Hello world" 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página en Construcción</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            background: linear-gradient(to bottom, #00174f 0%, #0069ff 100%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .container {
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #00174f;
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+        }
+        p {
+            color: #333;
+            font-size: 1.1rem;
+            margin-bottom: 2rem;
+        }
+        .links {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 1rem;
+        }
+        .links a {
+            color: #0069ff;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            border: 1px solid #0069ff;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .links a:hover {
+            background-color: #0069ff;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Página en Construcción</h1>
+        <p>Estamos trabajando duro para traerte un sitio web increíble. Mientras tanto, ¡mantente atento a las actualizaciones!</p>
+        <div class="links">
+            <a href="#">Inicio</a>
+            <a href="#">Acerca de</a>
+            <a href="#">Servicios</a>
+            <a href="#">Blog</a>
+            <a href="#">Contacto</a>
+        </div>
+    </div>
+</body>
+</html>
