--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             margin: 0;
             padding: 0;
             min-height: 100vh;
-            background: linear-gradient(to bottom, #00174f 0%, #0069ff 100%);
+            background: rgb(2,0,36);
+			background: linear-gradient(60deg, rgba(2,0,36,1) 0%, rgba(9,34,135,1) 56%, rgba(15,121,175,1) 100%);
             display: flex;
             flex-direction: column;
             align-items: center;
