--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1>Página en Construcción</h1>
         <p>Estamos trabajando duro para traerte un sitio web increíble. Mientras tanto, ¡mantente atento a las actualizaciones!</p>
         <div class="links">
-            <a href="index2.html">Inicio</a>
+            <a href="/index2.html">Inicio</a>
             <a href="#">Acerca de</a>
             <a href="#">Servicios</a>
             <a href="#">Blog</a>
